# ResumeGPT

./: .gitignore  render.yaml
backend/: .gitignore  mcp_server.py  pyproject.toml
backend/latex_resume_templates/: 1.tex  1.typ
backend/src/: config.py  main.py
backend/src/agents/: document_extractor.py  html_converter.py  html_extract_and_convert.py  html_modifier.py  resume_agent.py  typst_converter.py  typst_modifier.py
backend/src/services/: pdf_compiler.py  typst_pdf_compiler.py
backend/templates/: IITB.html  classic.html  deedy.html  executive.html  minimalist.html  mnnit.html  modern.html  standard.html
frontend/: package-lock.json  package.json
frontend-tw/: package.json
frontend-tw/src/: App.js  index.html  output.css
frontend/public/: index.html
frontend/src/: App.js  App.jsx  TemplateLibrary.js  api.js
frontend/src/components/: ExportPDFButton.jsx  ResumeUploader.jsx  TemplateSelector.jsx  TypstPreview.jsx
